# smart_pimpl

./: .gitignore  CMakeLists.txt  README.md
cmake/: smart_pimplConfig.cmake.in
include/smart_pimpl/: pimpl.hpp
include/smart_pimpl/internal/: helpers.hpp  impl_ptr.hpp  impl_ptr.inl
src/: CMakeLists.txt  concepts.hpp  pimpl.hpp
src/smart_pimpl/: pimpl.hpp  smart_pimpl.hpp
src/smart_pimpl/internal/: base.hpp  helpers.hpp  impl_ptr.hpp  impl_ptr.inl
src/value_ptr/: value_ptr.hpp
src/value_ptr/internal/: default_copy.hpp  default_delete.hpp  value_ptr_ops.inl
tests/: CMakeLists.txt  assign_copy.cpp  assign_move.cpp  construct_copy.cpp  construct_default.cpp  construct_move.cpp  construct_named.cpp  construct_nodefault.cpp  construct_secret.cpp  test.cpp  test.h  use_eager.cpp  use_lazy.cpp  use_poly_interface.cpp
tests/entity/: CMakeLists.txt
tests/smart_pimpl/: CMakeLists.txt
tests/smart_pimpl/entity/: Entity.cpp  Entity.h
tests/smart_pimpl/reference/: reference.cpp  reference.h
tests/smart_pimpl/tests/: assign_copy.cpp  assign_move.cpp  construct_copy.cpp  construct_default.cpp  construct_move.cpp  construct_nodefault.cpp  use_eager.cpp  use_lazy.cpp
tests/value/: CMakeLists.txt  assign_copy.cpp  assign_move.cpp  construct_copy.cpp  construct_default.cpp  construct_move.cpp  construct_nodefault.cpp  main.cpp  use_eager.cpp  use_lazy.cpp  value.cpp  value.h
tests/value_ptr/: CMakeLists.txt
tests/value_ptr/tests/: construction_and_assignment.cpp
